[project]
# DynaStore — meta-package. Pure orchestration: no source code. Pulls in
# `dynastore-core` (modules + tools + models + tasks + shared extension base)
# and dispatches the SCOPE composition through `[project.optional-dependencies]`
# to per-extension wheels (`dynastore-ext-*`). Real code lives under
# `packages/core/` and `packages/extensions/<name>/`.
name = "DynaStore"
dynamic = ["version"]
description = "DynaStore meta-package — SCOPE composition over per-wheel distributions."
authors = [
    { name = "Carlo Cancellieri", email = "ccancellieri@gmail.com" }
]
dependencies = [
    "dynastore-core",
]
requires-python = ">=3.12"
license-files = ["LICENSE"]
readme = "README.md"

# The 'optional-dependencies' defines the dependencies for each module/extension/task
# and aggregates them into 'api', 'worker', and 'all' variants for deployment.

[build-system]
requires = ["setuptools>=80.9.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

# ===========================================================================
# uv workspace — per-wheel split (extensions + core).
# Each member under packages/** produces its own pip-installable wheel
# (e.g. dynastore-core, dynastore-ext-maps). See packages/README.md for the
# migration plan.
# ===========================================================================
[tool.uv.workspace]
members = ["packages/core", "packages/extensions/*"]

[tool.uv.sources]
dynastore-core = { workspace = true }
dynastore-ext-tasks = { workspace = true }
dynastore-ext-stats = { workspace = true }
dynastore-ext-edr = { workspace = true }
dynastore-ext-moving-features = { workspace = true }
dynastore-ext-connected-systems = { workspace = true }
dynastore-ext-dimensions = { workspace = true }
dynastore-ext-notebooks = { workspace = true }
dynastore-ext-proxy = { workspace = true }
dynastore-ext-processes = { workspace = true }
dynastore-ext-search = { workspace = true }
dynastore-ext-crs = { workspace = true }
dynastore-ext-dggs = { workspace = true }
dynastore-ext-features = { workspace = true }
dynastore-ext-records = { workspace = true }
dynastore-ext-coverages = { workspace = true }
dynastore-ext-wfs = { workspace = true }
dynastore-ext-dwh = { workspace = true }
dynastore-ext-joins = { workspace = true }
dynastore-ext-styles = { workspace = true }
dynastore-ext-gcp-bucket = { workspace = true }
dynastore-ext-geoid = { workspace = true }
dynastore-ext-events = { workspace = true }
dynastore-ext-httpx = { workspace = true }
dynastore-ext-gdal = { workspace = true }
dynastore-ext-maps = { workspace = true }
dynastore-ext-tiles = { workspace = true }
dynastore-ext-stac = { workspace = true }
dynastore-ext-template = { workspace = true }
dynastore-ext-web = { workspace = true }
dynastore-ext-auth = { workspace = true }
dynastore-ext-iam = { workspace = true }
dynastore-ext-admin = { workspace = true }
dynastore-ext-logs = { workspace = true }
dynastore-ext-configs = { workspace = true }
dynastore-ext-assets = { workspace = true }

[project.optional-dependencies]
# ==========================================================================
# GRANULAR MODULES — building blocks, one per domain
# Use underscores to match entry-point names and folder names.
# pip normalizes _ to - internally (PEP 685); no effect on resolution.
# ==========================================================================
module_storage = []
module_storage_postgresql = []
module_storage_duckdb = ["duckdb>=1.0.0"]
module_storage_iceberg = ["pyiceberg[sql-postgres]>=0.9.0", "pyarrow>=14.0.0"]
module_storage_elasticsearch = ["dynastore[module_elasticsearch]"]
module_storage_elasticsearch_private = ["dynastore[module_elasticsearch]"]
module_storage_elasticsearch_assets = ["dynastore[module_elasticsearch]"]
module_collection_elasticsearch = ["dynastore[module_elasticsearch]"]
module_catalog_elasticsearch = ["dynastore[module_elasticsearch]"]
module_stac = []
module_catalog = ["dynastore[geospatial_core]", "sqlalchemy>=2.0.0"]
module_gcp = ["gcloud-aio-storage==9.6.0", "google-cloud-bigquery==3.24.0", "google-cloud-run", "google-cloud-storage>=3.1.0", "google-cloud-pubsub", "gcsfs>=2024.5.0", "charset-normalizer>=3", "urllib3>=2.0,<3", "requests>=2.32", "httpx", "pmtiles>=3.2.0"]
module_datastore = ["dynastore[db_sync]", "psycopg2-binary>=2.9.7"]
module_db_config = ["sqlalchemy", "geoalchemy2", "h3>=4.4.2", "s2sphere>=0.2.5", "python-dateutil"]
module_iam = ["pydantic[email]", "PyJWT>=2.0.0", "tenacity>=8.0"]
module_local = ["python-multipart>=0.0.9"]
module_db = ["dynastore[db_async]", "sqlalchemy[asyncio]", "asyncpg"]
module_crs = ["dynastore[geospatial_core]", "pyproj>=3.0.0"]
module_events = ["psycopg[binary,pool]"]
module_elasticsearch = ["opensearch-py[async]", "httpx"]
module_gdal = ["dynastore[geospatial_core]", "GDAL==3.12.3"]
module_tiles = ["dynastore[geospatial_core]", "pmtiles>=3.2.0", "morecantile>=7.0.3,<8"]
module_cache = ["valkey>=6.0", "msgpack>=1.0"]
module_tasks = []
module_proxy = []
module_styles = ["lxml>=4.9"]
module_moving_features = []
module_connected_systems = []
module_stats = []
module_notebooks = ["httpx", "python-dotenv"]

# ==========================================================================
# GRANULAR EXTENSIONS — FastAPI routers, one per domain
# ==========================================================================
extension_base = ["fastapi>=0.100"]
extension_web = ["dynastore[extension_base]", "markdown>=3.3.7", "dynastore-ext-web"]
extension_httpx = ["dynastore[extension_base]", "httpx", "dynastore-ext-httpx"]
extension_catalog = ["dynastore[extension_base,module_catalog]"]
extension_stac = ["dynastore[extension_base]", "pystac[validation]>=1.13.0", "stac-pydantic[validation]>=3.1.0", "dynastore-ext-stac"]
extension_auth = ["dynastore[extension_base,extension_web]", "python-multipart>=0.0.26", "itsdangerous>=2.0", "dynastore-ext-auth"]
extension_template = ["dynastore[extension_base]", "attrs>=25.3.0", "aiohttp>=3.12.15", "jinja2>=3.1.6", "xmltodict>=0.13.0", "httpx>=0.24.1", "dynastore-ext-template"]
extension_processes = ["dynastore[extension_base]", "jsonschema", "dynastore-ext-processes"]
extension_features = ["dynastore[extension_base,geospatial_core]", "pygeofilter[backend-sqlalchemy]", "dynastore-ext-features"]
extension_tiles = ["dynastore[extension_base,module_tiles]", "dynastore-ext-tiles"]
extension_volumes = ["dynastore[extension_base]", "shapely>=2.0"]
extension_tasks = ["dynastore[extension_base,module_tasks]", "dynastore-ext-tasks"]
extension_proxy = ["dynastore[extension_base,module_proxy]", "dynastore-ext-proxy"]
extension_gdal = ["dynastore[extension_base,module_gdal]", "dynastore-ext-gdal"]
extension_styles = ["dynastore[extension_base,module_styles]", "dynastore-ext-styles"]
extension_moving_features = ["dynastore[extension_base,module_moving_features]", "dynastore-ext-moving-features"]
extension_connected_systems = ["dynastore[extension_base,module_connected_systems]", "dynastore-ext-connected-systems"]
extension_iam = ["dynastore[extension_base,module_iam,extension_web]", "httpx>=0.24.1", "PyJWT>=2.8.0", "dynastore-ext-iam"]
extension_logs = ["dynastore[extension_base,extension_web]", "httpx", "dynastore-ext-logs"]
extension_configs = ["dynastore[extension_base]", "dynastore-ext-configs"]
extension_stats = ["dynastore[extension_base,module_stats]", "dynastore-ext-stats"]
extension_crs = ["dynastore[extension_base,module_crs]", "dynastore-ext-crs"]
extension_events = ["dynastore[extension_base,module_events]", "dynastore-ext-events"]
extension_wfs = ["dynastore[extension_base,geospatial_core]", "pyproj>=3.0.0", "dynastore-ext-wfs"]
extension_admin = ["dynastore[extension_base,extension_iam]", "dynastore-ext-admin"]
extension_assets = ["dynastore[extension_base]", "dynastore-ext-assets"]
extension_notebooks = ["dynastore[extension_base,module_notebooks]", "dynastore-ext-notebooks"]
extension_records = ["dynastore[extension_base]", "pygeofilter[backend-sqlalchemy]", "dynastore-ext-records"]
extension_search = ["dynastore[extension_base]", "dynastore-ext-search"]
extension_gcp_bucket = ["dynastore[extension_base,module_gcp]", "dynastore-ext-gcp-bucket"]
extension_geoid = ["dynastore[extension_base,extension_web]", "user-agents>=2.2.0", "dynastore-ext-geoid"]
extension_maps = ["dynastore[extension_base,geospatial_core,mvt]", "GDAL==3.12.3", "dynastore-ext-maps"]
extension_coverages = ["dynastore[extension_base,geospatial_core]", "rasterio>=1.4.3", "dynastore-ext-coverages"]
extension_edr = ["dynastore[extension_base,geospatial_core]", "dynastore-ext-edr"]
extension_dggs = ["dynastore[extension_base,geospatial_core]", "h3>=4.1.0", "s2sphere>=0.2.5", "dynastore-ext-dggs"]
module_coverages_netcdf = ["netCDF4>=1.6.0", "xarray>=2024.0.0"]
module_coverages_zarr = ["zarr>=2.18.0", "xarray>=2024.0.0"]
extension_dwh = ["dynastore[extension_base,dwh]", "pyproj>=3.0.0", "dynastore-ext-dwh"]
extension_dimensions = ["dynastore[extension_base]", "ogc-dimensions @ git+https://github.com/ccancellieri/ogc-dimensions.git@main#subdirectory=reference-implementation", "dynastore-ext-dimensions"]

# ==========================================================================
# GRANULAR TASKS
#
# Naming convention (SSOT — don't drift):
#   * catalog_task_<name> — lightweight, in-process task hosted by the catalog
#                           service (executed via FastAPI BackgroundTasks).
#                           Examples: bucket provisioning, GCS finalize hooks,
#                           catalog cleanup.
#   * worker_task_<name>  — heavy task packaged for Cloud Run Jobs (sync-db).
#                           On-prem, the `worker` service simulates these via
#                           in-process BackgroundTasks but the SCOPE naming
#                           stays the same so SCOPE=worker_task_<name> is a
#                           single, unambiguous task-type declaration.
#
# The gcp_cloud_runner reads each Cloud Run Job's SCOPE env var, strips the
# `worker_task_` prefix, and maps the remainder to the task entry-point name.
# See src/dynastore/modules/gcp/gcp_module.py::get_job_config.
# ==========================================================================

# ---- Dependency-only aliases (not runner-typed; consumed by the
#      catalog_task_* / worker_task_* extras below as composition blocks).
task_gdal_deps = ["dynastore[module_gdal]"]
task_elasticsearch_deps = ["dynastore[module_elasticsearch]"]
task_elasticsearch_indexer_deps = ["dynastore[module_elasticsearch]"]
task_ingestion_deps = ["dynastore[geospatial,module_gcp]"]
task_dwh_join_deps = ["dynastore[dwh]"]
task_export_features_deps = ["dynastore[geospatial_core,stac]"]
task_tiles_preseed_deps = ["dynastore[geospatial_core]", "morecantile>=7.0.3,<8"]
task_dimensions_materialize_deps = ["dynastore[extension_dimensions]"]

# ---- Catalog-hosted lightweight tasks (async-db, in-process).
catalog_task_gcp_provision = ["dynastore[module_gcp]"]
catalog_task_gcp_catalog_cleanup = ["dynastore[module_gcp,module_catalog]"]

# ==========================================================================
# PUBLIC FEATURE ALIASES — compose module + extension in one name
# ==========================================================================
catalog = ["dynastore[module_catalog,extension_catalog]"]
gcp = ["dynastore[module_gcp,extension_gcp_bucket]"]
datastore = ["dynastore[module_datastore]"]
db_config = ["dynastore[module_db_config]"]
iam = ["dynastore[module_iam,extension_iam]"]
db = ["dynastore[module_db]"]
crs = ["dynastore[module_crs,extension_crs]"]
cache = ["dynastore[module_cache]"]
events = ["dynastore[module_events,extension_events]"]
elasticsearch = ["dynastore[module_elasticsearch,task_elasticsearch_deps]"]
gdal = ["dynastore[module_gdal,extension_gdal,task_gdal_deps]"]
maps = ["dynastore[extension_maps]"]
stac = ["dynastore[module_stac, extension_stac]"]
stats = ["dynastore[module_stats,extension_stats]"]
web = ["dynastore[extension_web]"]
geoid = ["dynastore[web_core,extension_geoid]"]
processes = ["dynastore[extension_processes]"]
features = ["dynastore[extension_features]"]
styles = ["dynastore[module_styles,extension_styles]"]
moving_features = ["dynastore[module_moving_features,extension_moving_features]"]
connected_systems = ["dynastore[module_connected_systems,extension_connected_systems]"]
tiles = ["dynastore[module_tiles,extension_tiles]"]
tasks = ["dynastore[module_tasks,extension_tasks]"]
proxy = ["dynastore[module_proxy,extension_proxy]"]
logs = ["dynastore[extension_logs]"]
assets = ["dynastore[extension_assets]"]
configs = ["dynastore[extension_configs]"]
search = ["dynastore[extension_search]"]
storage = ["dynastore[module_storage]"]
auth = ["dynastore[extension_auth]"]
template = ["dynastore[extension_template]"]
dimensions = ["dynastore[extension_dimensions]"]
notebooks = ["dynastore[extension_notebooks]"]
edr = ["dynastore[extension_edr]"]

# ==========================================================================
# PRIMITIVES
# ==========================================================================
geospatial_core = [
    "shapely>=2.1.1",
    "geojson-pydantic>=1.0.0",
]
geospatial_io = [
    "dynastore[geospatial_core]",
    "lxml>=6.1.0,<7",
    "pyarrow<19,>=16",
    "numpy==1.26.4",
    "geopandas>=0.14.0",
    "fiona>=1.9.4",
]
geospatial = ["dynastore[geospatial_io]"]
db_async = ["dynastore[db_config,db]"]
db_sync = ["dynastore[db_config,datastore]"]

# ==========================================================================
# DOMAIN GROUPS — major functional areas, composable independently
#
#   0. core         — async DB, web framework, system config & events
#   1. catalog_grp  — data catalog, features, STAC, assets, search, records
#   2. maps_grp     — rendering: WFS, tiles, CRS, styles, maps
#   3. google_grp   — GCP storage, BigQuery DWH
#   4. auth_grp     — iam + auth + admin  (always the LAST wrapper)
#   5. tools_grp    — HTTP client, templating (proxy is opt-in for catalog/maps)
#   6. monitor_grp  — stats, logs
#   7. index_grp    — Elasticsearch full-text search
#   *  processes    — standalone; on catalog (cloud) or worker (on-prem)
#
# ==========================================================================
core = ["dynastore[db_async,web,configs,events,storage,cache]"]
# catalog_grp split: data layer (needed by maps for collection reads + /features)
# vs public catalog routers (stac/assets/search/records — not on maps).
catalog_data_grp = ["dynastore[geospatial_core,catalog,features]"]
catalog_routes_grp = ["dynastore[stac,assets,search,extension_records]"]
catalog_grp = ["dynastore[catalog_data_grp,catalog_routes_grp,module_local]"]
maps_grp = ["dynastore[styles,maps,extension_wfs,tiles,crs,gdal,extension_coverages]"]
# google_grp split: dwh is rendering input (BQ joins also live here),
# gcp is the bucket-admin router (not on maps).
dwh_grp = ["dynastore[extension_dwh,module_gcp]"]
gcp_routes_grp = ["dynastore[gcp]"]
google_grp = ["dynastore[gcp_routes_grp,dwh_grp]"]
auth_grp = ["dynastore[iam,auth,extension_admin]"]
# tools_grp split: core proxy/template vs route-heavy dimensions/notebooks.
tools_core_grp = ["dynastore[extension_httpx,template]"]
tools_grp = ["dynastore[tools_core_grp,dimensions,notebooks]"]
monitor_grp = ["dynastore[stats,logs]"]
index_grp = ["dynastore[elasticsearch,task_elasticsearch_indexer_deps]"]
# drivers_grp — all storage/asset/metadata drivers (both collection and asset domains)
drivers_grp = ["dynastore[module_storage_postgresql,module_storage_duckdb,module_storage_iceberg,module_storage_elasticsearch,module_storage_elasticsearch_private,module_storage_elasticsearch_assets,module_collection_elasticsearch,module_catalog_elasticsearch]"]

# ==========================================================================
# TASK GROUPINGS (sync-db)
# ==========================================================================
task_base = ["dynastore[db_sync,module_tasks,module_events,extension_processes]"]
ingestion = ["dynastore[task_base,module_gcp,task_ingestion_deps]"]
# outbox_drain — generic per-driver outbox consumer used by indexer worker
# Cloud Run Jobs. Only depends on task_base; the concrete BulkIndexer
# adapter is supplied by the worker's own driver extras (e.g. the ES
# worker also pulls in module_elasticsearch).
outbox_drain = ["dynastore[task_base]"]

# ---- Worker / Cloud Run Job task extras (heavy; sync-db via task_base).
# One extras per task. Each Cloud Run Job is deployed with
# SCOPE=worker_task_<name> — a single unambiguous identifier the catalog's
# gcp_cloud_runner uses to map discovered jobs back to task entry-points.
#
# `module_catalog` audit (2026-04-29, B6 + Phase H follow-ups):
#   - dwh_join: original audit assumed raw SQL only, but Phase H container
#     log surfaced `Skipping plugin 'dwh_join': No module named 'shapely'` —
#     the entry-point load transitively pulls shapely via
#     `extensions/dwh/models.py → tools/geospatial`. Need module_catalog
#     (which provides geospatial_core → shapely). PR #140.
#   - export_features: already has geospatial_core directly.
#   - tiles_preseed: tasks/tiles_preseed/task.py:65 calls
#     `get_protocol(CatalogsProtocol)`. Needs module_catalog.
#   - gdal: tasks/gdal/asset_process.py:25 + gdalinfo_task.py:32,40 import
#     `from dynastore.modules.catalog.asset_service`. Needs module_catalog.
#   - dimensions_materialize: tasks/dimensions_materialize/task.py:67 calls
#     `get_protocol(CatalogsProtocol)`. Needs module_catalog.
#   - elasticsearch_indexer: BulkCatalog/CollectionReindexTask via
#     CatalogsProtocol. Confirmed by `dynastore-elasticsearch-indexer-cq7k9`
#     exec on 2026-04-29 (B6, PR #131).
# dwh_join: extensions/dwh/dwh.py imports modules/tiles/tms_definitions
# which has `from pyproj import CRS` at module level. module_crs provides
# pyproj. Without it the entry-point load fails with `Skipping plugin
# 'dwh_join': No module named 'pyproj'` and the dispatcher registers a
# DefinitionOnlyTask placeholder — main_task.py then raises a misleading
# "run method without payload annotation" error. Confirmed by
# dynastore-dwh-join-export-job-snq2n container log on 2026-04-29.
# `module_storage_postgresql` (empty marker) is added on every worker_task_*
# SCOPE so the SCOPE × routing invariant test passes: items routing keeps
# `items_postgresql_driver` at FATAL for WRITE (it is the source of truth);
# every worker scope must therefore declare it can host the PG items driver
# class even when the task itself does not exercise items WRITE — module
# imports still resolve through ItemsRoutingConfig instantiation.
worker_task_dwh_join = ["dynastore[task_base,module_catalog,module_crs,dwh,module_storage_postgresql]"]
worker_task_ingestion = ["dynastore[ingestion,catalog_grp,google_grp,gdal,drivers_grp]"]
# export_features: writes feature output to GCS (`gs://...` destination_uri)
# via dynastore.modules.gcp clients. Without module_gcp the worker raises
# at task run time: "GCPModule has not been initialized or failed to
# create a storage client." Confirmed by 019dda8e-a239-7bd8-...
# OGC poll on 2026-04-29.
worker_task_export_features = ["dynastore[task_base,module_gcp,stac,geospatial_core,module_storage_postgresql]"]
worker_task_tiles_preseed = ["dynastore[task_base,module_catalog,tiles,crs,module_storage_postgresql]", "morecantile>=7.0.3,<8"]
worker_task_gdal = ["dynastore[task_base,module_catalog,gdal,module_storage_postgresql]"]
worker_task_dimensions_materialize = ["dynastore[task_base,module_catalog,extension_dimensions,module_storage_postgresql]"]
worker_task_elasticsearch_indexer = ["dynastore[task_base,module_catalog,elasticsearch,task_elasticsearch_indexer_deps,outbox_drain,module_storage_postgresql]"]

# ==========================================================================
# SERVICE COMPOSITIONS (async-db)
#
#   ┌──────────────────────────────────────────────────────────┐
#   │  Domain groups (all WITHOUT auth)                        │
#   ├──────────────────────────────────────────────────────────┤
#   │  core        = db_async + web + configs + events         │
#   │  catalog_grp = geospatial + catalog + features + stac    │
#   │               + assets + search + records                │
#   │  maps_grp    = styles + maps + wfs + tiles + crs + gdal  │
#   │  google_grp  = gcp + dwh                                 │
#   │  tools_grp   = httpx + template                          │
#   │  monitor_grp = stats + logs                              │
#   │  index_grp   = elasticsearch                             │
#   ├──────────────────────────────────────────────────────────┤
#   │  Standalone (deployment-dependent)                       │
#   ├──────────────────────────────────────────────────────────┤
#   │  processes   = task orchestration API                     │
#   │               cloud  → on catalog (tasks on Cloud Run)   │
#   │               on-prem → on worker  (tasks run locally)   │
#   ├──────────────────────────────────────────────────────────┤
#   │  Auth wrapper (added LAST)                               │
#   ├──────────────────────────────────────────────────────────┤
#   │  auth_grp    = iam + auth + admin                        │
#   ├──────────────────────────────────────────────────────────┤
#   │  Deployable services                                     │
#   ├──────────────────────────────────────────────────────────┤
#   │  api_open       = core + catalog + google                │
#   │                   + monitor + index                      │
#   │                   + processes               ... NO auth  │
#   │                   (tools_grp on dedicated tools service) │
#   │  api_catalog    = api_open + auth_grp      ... WITH auth │
#   │  api_maps_open  = core + catalog_data + maps + dwh       │
#   │                   + tools_core + es-cat    ... NO auth   │
#   │                   (vector producer + raster renderer;    │
#   │                    no stac/assets/search/records/stats/  │
#   │                    logs/gcp/dimensions/notebooks)        │
#   │  api_maps       = api_maps_open + auth_grp ... WITH auth │
#   │  api_features   = core + catalog_grp        ... NO auth  │
#   │  api_full       = api_catalog + maps_grp                 │
#   │                   + geospatial_io          ... WITH auth │
#   │  geoid_service  = api_catalog + geoid ← ONLY auth svc   │
#   │  worker_service = core + catalog + google + index        │
#   │                   + tasks + processes                     │
#   │                   + ingestion + jobs        ... NO auth  │
#   ├──────────────────────────────────────────────────────────┤
#   │  Local-only scopes                                       │
#   ├──────────────────────────────────────────────────────────┤
#   │  catalog_local  = api_open w/o google_grp     ... NO gcp │
#   │  worker_local   = worker_service + monitor    ... NO auth│
#   └──────────────────────────────────────────────────────────┘
#
# Docker scopes (scope_* extras):
#   catalog service -> CATALOG_SCOPE=scope_catalog (no auth)
#   geoid   service -> GEOID_SCOPE=scope_geoid     (catalog + auth + geoid UI)
#   worker  service -> WORKER_SCOPE=scope_worker   (tasks + processes/stats UI)
#   tools   service -> TOOLS_SCOPE=scope_tools     (proxy + template)
#   maps    service -> MAPS_SCOPE=scope_maps       (tiles/styles, no auth)
#
# ==========================================================================
# api_open: full catalog WITHOUT auth — open for testing (no tools_grp: proxy/template served by the dedicated tools service)
api_open = ["dynastore[core,catalog_grp,google_grp,monitor_grp,index_grp,processes,tasks,catalog_task_gcp_provision,catalog_task_gcp_catalog_cleanup]"]
# api_catalog: api_open + auth (most common production deployment)
api_catalog = ["dynastore[api_open,auth_grp]"]
# api_maps_open: vector producer + raster renderer, no auth.
# Surface limited to: /maps /tiles /styles /wfs /features /coverages /crs /gdal /dwh /joins
# (plus ALWAYS_ON: /configs /web /events /admin /iam /auth /tools /template /httpx).
# Excluded vs. legacy: catalog_routes_grp (stac/assets/search/records),
# gcp_routes_grp, monitor_grp (stats/logs), dimensions, notebooks.
api_maps_open = ["dynastore[core,catalog_data_grp,maps_grp,dwh_grp,tools_core_grp,module_catalog_elasticsearch]"]
# api_maps: same surface WITH auth (kept for reference / future use)
api_maps = ["dynastore[api_maps_open,auth_grp]"]
# api_features: lightweight local-dev service — OGC Features + STAC, no GCP/tools/index
api_features = ["dynastore[core,catalog_grp]"]
# api_full: all features (local dev or monolithic deployments)
api_full = ["dynastore[api_catalog,maps_grp,geospatial_io]"]
# geoid_service: api_catalog + geoid extension — the ONLY service with auth
geoid_service = ["dynastore[api_catalog,extension_geoid]"]
# worker_service: background task processor (sync-db tasks + async-db catalog reads), no auth
worker_service = ["dynastore[core,catalog_grp,google_grp,index_grp,tasks,processes,ingestion,worker_task_export_features,worker_task_dwh_join,worker_task_tiles_preseed,worker_task_gdal,worker_task_dimensions_materialize,catalog_task_gcp_provision,catalog_task_gcp_catalog_cleanup]"]
# catalog_local: local dev catalog — api_open without google_grp/gcp_cloud_runner (no tools_grp: use the dedicated tools service)
catalog_local = ["dynastore[core,catalog_grp,monitor_grp,index_grp,processes]"]
# worker_local: local HTTP simulation of Cloud Run Jobs — all tasks + processes/stats UI
worker_local = ["dynastore[worker_service,monitor_grp]"]

# ==========================================================================
# DOCKER SERVICE SCOPES (used by docker-compose SCOPE build arg)
# Prefixed with scope_ to avoid collision with module-level extras above.
# ==========================================================================
# scope_catalog: catalog API without auth — open for local testing
scope_catalog = ["dynastore[core,catalog_grp,google_grp,monitor_grp,index_grp,processes,tasks,catalog_task_gcp_provision,catalog_task_gcp_catalog_cleanup,module_cache,notebooks,dimensions,drivers_grp]"]
# scope_geoid: catalog + geoid UI + auth/iam — maps to geospatial-auth in cloud
scope_geoid = ["dynastore[scope_catalog,extension_geoid,auth_grp]"]
# scope_worker: background task processor — headless Cloud Run job runner
scope_worker = ["dynastore[core,module_catalog,gcp,extension_dwh,index_grp,tasks,ingestion,worker_task_export_features,worker_task_dwh_join,worker_task_tiles_preseed,worker_task_gdal,worker_task_dimensions_materialize,catalog_task_gcp_provision,catalog_task_gcp_catalog_cleanup]"]
# scope_tools: proxy + template tools service — no auth
scope_tools = ["dynastore[core,template,notebooks,cache,dimensions,proxy]"]
# scope_maps: vector producer + raster renderer (local docker), no auth.
# Mirrors api_maps_open + module_cache + drivers_grp so local data reads work.
scope_maps = ["dynastore[core,catalog_data_grp,maps_grp,dwh_grp,tools_core_grp,module_cache,module_catalog_elasticsearch,drivers_grp]"]

# ==========================================================================
# DEVELOPMENT & TESTING
# ==========================================================================
all = ["dynastore[api_full,geoid_service,worker_service]"]
# Superset of `all` that pulls in every optional driver / task-only dependency
# referenced anywhere in src/. Pyright/mypy need these resolvable to clear
# `reportMissingImports` on optional code paths (duckdb, pyiceberg, morecantile,
# …). Not for runtime: keep service images on `all` to stay slim.
typecheck = ["dynastore[all,drivers_grp,task_tiles_preseed_deps,extension_template]"]
test = ["pytest>=8.0.0", "pytest-asyncio>=0.23.5", "pytest-cov>=4.1.0", "pytest-xdist>=3.5.0", "pytest-timeout>=2.3.0", "requests>=2.31.0", "orjson>=3.9.15"]
notebooks_test = ["dynastore[test]", "nbval>=0.11", "ipykernel>=6.29", "jupyter-client>=8.6", "httpx>=0.27", "python-dotenv>=1.0"]
lite_build = ["jupyterlite-core>=0.4", "jupyterlite-pyodide-kernel>=0.4"]
dev = ["ruff", "black", "mypy", "pyright>=1.1.390", "debugpy", "dynastore[test]"]

# Internals/Aliases
mvt = []
# /join/* OGC API - Joins extension. Ships alongside dwh (same BQ deps;
# joins extension is OGC-conformant, dwh keeps the legacy tile-join surface).
joins = ["google-cloud-bigquery", "db-dtypes", "pandas", "dynastore-ext-joins"]
# Installing dwh pulls in joins so deployments that ship the legacy
# tile-join surface also expose the new OGC /join/* endpoints.
dwh = ["dynastore[joins]"]
psycopg_pool = ["psycopg[binary,pool]"]


[project.entry-points."dynastore.extensions"]
# maps: migrated to packages/extensions/maps (dynastore-ext-maps wheel)
# stac: migrated to packages/extensions/stac (dynastore-ext-stac wheel)
# dwh: migrated to packages/extensions/dwh (dynastore-ext-dwh wheel)
# joins: migrated to packages/extensions/joins (dynastore-ext-joins wheel)
# tasks: migrated to packages/extensions/tasks (dynastore-ext-tasks wheel) — Phase 1 pilot
# proxy: migrated to packages/extensions/proxy (dynastore-ext-proxy wheel)
# gdal: migrated to packages/extensions/gdal (dynastore-ext-gdal wheel)
# auth: migrated to packages/extensions/auth (dynastore-ext-auth wheel)
# web: migrated to packages/extensions/web (dynastore-ext-web wheel)
# processes: migrated to packages/extensions/processes (dynastore-ext-processes wheel)
# features: migrated to packages/extensions/features (dynastore-ext-features wheel)
# template: migrated to packages/extensions/template (dynastore-ext-template wheel)
# admin: migrated to packages/extensions/admin (dynastore-ext-admin wheel)
# geoid: migrated to packages/extensions/geoid (dynastore-ext-geoid wheel)
# gcp_bucket: migrated to packages/extensions/gcp (dynastore-ext-gcp-bucket wheel)
# search: migrated to packages/extensions/search (dynastore-ext-search wheel)
# styles: migrated to packages/extensions/styles (dynastore-ext-styles wheel)
# connected_systems: migrated to packages/extensions/connected_systems (dynastore-ext-connected-systems wheel)
# httpx: migrated to packages/extensions/httpx (dynastore-ext-httpx wheel)
# iam: migrated to packages/extensions/iam (dynastore-ext-iam wheel)
# logs: migrated to packages/extensions/logs (dynastore-ext-logs wheel)
# configs: migrated to packages/extensions/configs (dynastore-ext-configs wheel)
# crs: migrated to packages/extensions/crs (dynastore-ext-crs wheel)
# events: migrated to packages/extensions/events (dynastore-ext-events wheel)
# wfs: migrated to packages/extensions/wfs (dynastore-ext-wfs wheel)
# assets: migrated to packages/extensions/assets (dynastore-ext-assets wheel)
# notebooks: migrated to packages/extensions/notebooks (dynastore-ext-notebooks wheel)
# stats: migrated to packages/extensions/stats (dynastore-ext-stats wheel) — Phase 1 pilot
# tiles: migrated to packages/extensions/tiles (dynastore-ext-tiles wheel)
# dimensions: migrated to packages/extensions/dimensions (dynastore-ext-dimensions wheel)
# records: migrated to packages/extensions/records (dynastore-ext-records wheel)
# coverages: migrated to packages/extensions/coverages (dynastore-ext-coverages wheel)
# edr: migrated to packages/extensions/edr (dynastore-ext-edr wheel)
# moving_features: migrated to packages/extensions/moving_features (dynastore-ext-moving-features wheel)
# dggs: migrated to packages/extensions/dggs (dynastore-ext-dggs wheel)


[tool.setuptools]
# Meta-package: no Python source. Tell setuptools auto-discovery
# explicitly that there are no packages here so it doesn't sweep up
# `packages/` (the workspace tree) or `notebook_showcase/`.
packages = []

[tool.setuptools_scm]
# Meta-package version derives from git tags via setuptools-scm. The same tag
# also stamps every dynastore-{core,ext-*} workspace member, so all wheels in
# a build share one version (set explicitly via SETUPTOOLS_SCM_PRETEND_VERSION
# in the Docker layer 3 re-install loop, where APP_VERSION is passed by CI).
local_scheme = "no-local-version"
fallback_version = "0.0.0+unknown"

[project.urls]
Homepage = "https://github.com/un-fao/dynastore/"
Documentation = "https://github.com/un-fao/dynastore/#readme"
Issues = "https://github.com/un-fao/dynastore/issues"
Changelog = "https://github.com/un-fao/dynastore/blob/main/CHANGES.md"

# ==========================================================================
# TYPE CHECKING — Pyright
# ==========================================================================
[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Linux"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
# Type-check the workspace tree: dynastore-core + every per-extension wheel.
# (After the Phase 1 move, src/ at the repo root no longer exists; all
# Python source lives under packages/core/src/ and packages/extensions/*/src/.)
include = [
    "packages/core/src/dynastore",
    "packages/extensions/*/src/dynastore",
]
extraPaths = [
    "packages/core/src",
    "packages/extensions/coverages/src",
    "packages/extensions/gdal/src",
    "packages/extensions/notebooks/src",
    "packages/extensions/template/src",
    "packages/extensions/web/src",
]
exclude = [
    "**/__pycache__",
    "**/build",
    "tests",
    "scripts",
]
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportMissingParameterType = false
# Disabled: optional cross-env packages (rasterio, zarr, osgeo, _scm_version)
# are present in CI but absent in local dev venvs.  Any # type: ignore on
# their import lines is necessary locally but "unnecessary" in CI, creating
# false-positive warnings that fail --warnings-mode builds.
reportUnnecessaryTypeIgnoreComment = "none"
# Many runtime deps ship as binary wheels without source (.py) files; pyright
# resolves them via stubs. The "could not be resolved from source" warning is
# noise that doesn't indicate a real problem.
reportMissingModuleSource = "none"

[[tool.pyright.executionEnvironments]]
root = "packages/core/src/dynastore/models/protocols"
typeCheckingMode = "strict"

# Optional-extra raster paths (rasterio): silence missing-import noise on files
# that lazy-import these at call time. Runtime guards with try/except.
[[tool.pyright.executionEnvironments]]
root = "packages/core/src/dynastore/modules/coverages"
reportMissingImports = "none"

[[tool.pyright.executionEnvironments]]
root = "packages/core/src/dynastore/modules/gdal"
reportMissingImports = "none"

[[tool.pyright.executionEnvironments]]
root = "packages/core/src/dynastore/modules/edr"
reportMissingImports = "none"

[[tool.pyright.executionEnvironments]]
root = "packages/core/src/dynastore/tasks/gdal"
reportMissingImports = "none"

[[tool.pyright.executionEnvironments]]
root = "packages/core/src/dynastore/tasks/ingestion/readers"
reportMissingImports = "none"

[[tool.pyright.executionEnvironments]]
root = "packages/extensions/coverages/src/dynastore/extensions/coverages"
reportMissingImports = "none"

[[tool.pyright.executionEnvironments]]
root = "src/dynastore/extensions/maps"
reportMissingImports = "none"

# Machine compositions have been moved to docker/.env (Docker) and
# .github/config/apps.base.yml (cloud). Use the extras groups above as building blocks.
